--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,12 @@
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - '8080:8080'
-    depends_on:
-      - postgres
+#  app:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    ports:
+#      - '8080:8080'
+#    depends_on:
+#      - postgres
 
   postgres:
     image: 'postgres:latest'
@@ -15,4 +15,9 @@ services:
       - 'POSTGRES_PASSWORD=secret'
       - 'POSTGRES_USER=myuser'
     ports:
-      - '5432:5432'
+      - '15432:5432'
+  temporal:
+    image: 'davidsackett/temporal-dev:latest'
+    ports:
+      - '7233:7233'
+      - '8233:8233'
